[package]
name = "pingp"
version = "0.1.0"
edition = "2021"
description = "ping lib that pings websites easy and fast"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}
future-utils = "0.12.1"
is-url = "1"
log = "0.4"
url = "2.4"